<resources>
    <string name="app_name">Open Task Worker</string>
    <string name="app_name_long">Open Task Worker</string>
    <string name="menu_dashboard">DASHBOARD</string>
    <string name="menu_tasks">TASKS</string>
    <string name="menu_new_task">NEW TASK</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="dashboard_service_running">OTW Background-Service running</string>
    <string name="new_trigger_list">Select the triggers for your task:</string>
    <string name="new_actions_list">List of available actions:</string>
    <string name="new_actions_selection">Your selected actions:</string>
    <string name="new_task_name">Name of your Task</string>
    <string name="setting_akku">Ignore battery optimization</string>
    <string name="setting_logging">Enable logging</string>
    <string name="setting_restart">Restart on Boot</string>
    <string name="setting_variables">Available variable-types:</string>
    <string name="dialog_parameter_header">Please select your trigger/action:</string>
    <string name="dialog_parameter_button_save">SAVE</string>
    <string name="dialog_parameter_button_delete">DELETE</string>
    <string name="dialog_parameter_button_test">TEST</string>
    <string name="dialog_parameter_button_close">CLOSE</string>
    <string name="header_new_trigger">TRIGGER</string>
    <string name="header_new_action">ACTION</string>
    <string name="header_settings_basic">BASIC</string>
    <string name="header_settings_variables">VARIABLES</string>
    <string name="header_setting_donate">SUPPORT</string>
    <string name="header_dashboard_overview">OVERVIEW</string>

    <string name="alert_warning">WARNING!</string>
    <string name="alert_delete_task">Do you realy want to delete the task?</string>
    <string name="alert_existing_task">Task with this name already exists! Do you want to overwrite it?</string>

    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="coffee_link">https://www.buymeacoffee.com/spifitu</string>

    <string name="error_emtpy_filename">Filname is empty!</string>
    <string name="error_variable_is_defined">Variable is already defined!</string>

    <!-- ACTION / SENSOR / VARIABLE -->
    <string name="airplane_mode_on">Airplain Mode ON</string>
    <string name="airplane_mode_off">Airplain Mode OFF</string>

    <string name="ap_on">Hotspot ON</string>
    <string name="ap_off">Hotspot OFF</string>

    <string name="app_start">App to start</string>

    <string name="batter_level_changed">Batterlevel changed to</string>

    <string name="batter_charging">Batter charching</string>
    <string name="batter_discharching">Batter discharching</string>

    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_toggle">Bluetooth TOGGLE</string>

    <string name="boot_up">Device booted</string>

    <string name="brightness_level">Brightness Level (0-255)</string>

    <string name="button_call">Button CALL clicked</string>
    <string name="button_camera">Button CAMERA clicked</string>
    <string name="button_media">Button MEDIA clicked</string>
    <string name="button_home">Button HOME</string>

    <string name="camera_snap">Photo taken</string>

    <string name="connection_wifi">WIFI connection</string>
    <string name="connection_mobile_data">Mobiled data connection</string>
    <string name="connection_disconnected">No connection</string>

    <string name="darkmode_on">Darkmode ON</string>
    <string name="darkmode_off">Darkmode OFF</string>

    <string name="date_value">Date value</string>

    <string name="delay_time">Delay (ms)</string>

    <string name="email_server">SMTP-Server</string>
    <string name="email_port">SMTP-Port</string>
    <string name="email_auth">use authentification</string>
    <string name="email_username">SMTP-Username</string>
    <string name="email_password">SMTP-Password</string>

    <string name="file_copy">File COPY</string>
    <string name="file_move">File MOVE</string>
    <string name="file_directory">Directory</string>
    <string name="file_name">Filename (* wildcard)</string>
    <string name="file_target">Target</string>

    <string name="file_delete_directory">Directory</string>
    <string name="file_delete_filename">Filename</string>

    <string name="file_write_create">File CREATE</string>
    <string name="file_write_append">File APPEND</string>
    <string name="file_write_directory">Directory</string>
    <string name="file_write_filename">Filename</string>
    <string name="file_write_text">Text</string>

    <string name="flash_on">Flash ON</string>
    <string name="flash_off">Flash OFF</string>

    <string name="gps_on">GPS ON</string>
    <string name="gps_off">GPS OFF</string>

    <string name="headset_plug">Headset PLUG</string>
    <string name="headser_unplug">Headset UNPLUG</string>

    <string name="http_url">URL</string>
    <string name="http_method">Method</string>
    <string name="http_parameter">URL-Parameter</string>

    <string name="interruption_alarms">Interruption ALARM</string>
    <string name="interruption_none">Interruption NONE</string>
    <string name="interruption_all">Interruption ALL</string>
    <string name="interruption_priority">Interruption PRIORITY</string>
    <string name="interruption_unknown">Interruption UNKNOWN</string>

    <string name="ip_changed">IP changed</string>
    <string name="ip_address">New IP-address (v4)</string>

    <string name="notify_title">Notification Title</string>
    <string name="notify_text">Notification Content</string>
    <string name="notify_vibrate">Vibrate</string>

    <string name="number_input">Number value</string>

    <string name="orientation_portrait">Orientation PORTRAIT</string>
    <string name="orientation_landscape">Orientation LANDSCAPE</string>

    <string name="outgoingcall_started">Outgoingcall started</string>

    <string name="password_value">Password</string>

    <string name="phone_idle">Phone idle</string>
    <string name="phone_ringing">Phone ringing</string>
    <string name="phone_offhock">Phone offhock</string>

    <string name="phone_number">Phone-Number</string>

    <string name="powersavemode_on">Powersave-Mode ON</string>
    <string name="powersavemode_off">Powersave-Mode OFF</string>

    <string name="proxy_changed">Proxy changed</string>

    <string name="screen_on">Screen ON</string>

    <string name="screen_off">Screen OFF</string>

    <string name="sim_loaded">Sim-Card LOADED</string>
    <string name="sim_imsi">Sim-Card IMSI</string>
    <string name="sim_ready">Sim-Card READY</string>
    <string name="sim_locked">Sim-Card LOCKED</string>

    <string name="sms_received">SMS received</string>
    <string name="sms_number">SMS from Number</string>
    <string name="sms_to_number">Send SMS to Number</string>
    <string name="sms_message">Message</string>

    <string name="string_input">String value</string>

    <string name="time_value">Time value:</string>
    <string name="time_interval">Interval [min]:</string>

    <string name="usb_connected">USB connected</string>
    <string name="usb_disconnected">USB disconnected</string>

    <string name="variable_name">Variable Name</string>

    <string name="vibrator_ms">Vibrator (ms)</string>

    <string name="wallpaper_changed">Wallpaper changed</string>

    <string name="wifi_on">WIFI ON</string>
    <string name="wifi_off">WIFI OFF</string>
    <string name="wifi_toggle">WIFI Toggle</string>
    <string name="wifi_ssid">Connected SSID</string>

</resources>