<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_parameter_header"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/containerParameter"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnParameterDelete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialog_parameter_button_delete"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnParameterSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dialog_parameter_button_save"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>