<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.errag.opentaskworker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/layoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonDashboard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_top_left"
                    android:text="@string/menu_dashboard"
                    app:backgroundTint="#2196F3"
                    app:icon="@drawable/img_dashboard"
                    app:iconSize="40dp" />

                <Button
                    android:id="@+id/buttonTasks"
                    android:layout_width="0dp"
                    android:layout_height="81dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_top_right"
                    android:paddingLeft="30dp"
                    android:paddingBottom="15dp"
                    android:text="@string/menu_tasks"
                    app:backgroundTint="#FF9800"
                    app:icon="@drawable/img_task"
                    app:iconGravity="textEnd"
                    app:iconSize="40dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonNew"
                    android:layout_width="0dp"
                    android:layout_height="81dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bottom_left"
                    android:paddingTop="15dp"
                    android:paddingRight="30dp"
                    android:text="@string/menu_new_task"
                    app:backgroundTint="#8BC34A"
                    app:icon="@drawable/img_new"
                    app:iconSize="40dp" />

                <Button
                    android:id="@+id/buttonSettings"
                    android:layout_width="0dp"
                    android:layout_height="81dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bottom_right"
                    android:paddingLeft="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/menu_settings"
                    app:backgroundTint="#989797"
                    app:icon="@drawable/img_gear"
                    app:iconGravity="textEnd"
                    app:iconSize="40dp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:height="5dp"
            android:background="#000000"
            android:gravity="center|center_horizontal|center_vertical"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:height="35dp"
            android:background="#2196F3"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/menu_dashboard"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutTasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/layoutSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/textSettingVariablesHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:height="35dp"
                    android:alpha="0.90"
                    android:background="#989797"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/header_settings_variables"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSettingVariables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/setting_variables" />

                <HorizontalScrollView
                    android:id="@+id/scrollSettingVariables"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"></LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/layoutSettingsVariables"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/textSettingVariablesSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="5dp"
                    android:height="35dp"
                    android:alpha="0.90"
                    android:background="#989797"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/header_setting_donate"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonSettingsCoffee"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_basic"
                    android:text="@string/buy_me_a_coffee"
                    app:backgroundTint="#989797"
                    app:icon="@drawable/img_coffee"
                    app:iconSize="40dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDashboardHeaderOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:height="35dp"
                    android:alpha="0.90"
                    android:background="#2196F3"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/header_dashboard_overview"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switchDashboardService"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/dashboard_service_running"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <EditText
                        android:id="@+id/editTextNewTaskName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/new_task_name"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/buttonNewSaveTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="#8BC34A"
                        android:backgroundTint="#8BC34A"
                        android:text="@string/dialog_parameter_button_save"
                        app:iconTint="#00BD5C5C" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textNewTrigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:height="35dp"
                    android:alpha="0.90"
                    android:background="#8BC34A"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/header_new_trigger"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNewTriggerList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_trigger_list" />

                <HorizontalScrollView
                    android:id="@+id/scrollNewTriggerList"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/textNewAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="15dp"
                    android:height="35dp"
                    android:alpha="0.90"
                    android:background="#8BC34A"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/header_new_action"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNewActionSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_actions_selection" />

                <HorizontalScrollView
                    android:id="@+id/scrollNewActionSelection"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"></LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/textNewActionList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_actions_list" />

                <HorizontalScrollView
                    android:id="@+id/scrollNewActionList"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>